--- a/index/index.html
+++ b/index/index.html
@@ -29,12 +29,12 @@
 
 <div class="container-fluid text-center">
 
-
+<address>
 <p><strong>CRN Technologies LTD.</strong><br>
 <span class="glyphicon glyphicon-map-marker"></span> Kemp House 152-160 City Road<br>
 EC1V 2NX London, United Kingdom<br>
-<span class="glyphicon glyphicon-envelope"></span>  sales@crntech.io</p>
-
+<span class="glyphicon glyphicon-envelope"></span> <a href="mailto:sales@crntech.io" style="color:rgb(0, 0, 0);">sales@crntech.io</a></p>
+</address>
 </div>
 
 
