--- a/index/index.html
+++ b/index/index.html
@@ -22,7 +22,7 @@
 </style>
 
 
-<img src="/users/michellemaas/desktop/CRN_LOGO300x300TEKST.jpg" alt="crntech_logo" class="center" style="width:22%;">
+<img src="https://github.com/michellemaas/crntechio/blob/master/CRN_LOGO300x300TEKST.jpg?raw=true" alt="crntech_logo" class="center" style="width:22%;">
 
 
 <body>
