--- a/index/index.html
+++ b/index/index.html
@@ -19,6 +19,12 @@
 .text-center {
     text-align: center
 }
+div {
+    padding-top: 50px;
+    padding-right: 30px;
+    padding-bottom: 50px;
+    padding-left: 80px;
+}
 </style>
 
 
