--- a/index/index.html
+++ b/index/index.html
@@ -9,21 +9,27 @@
      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
-<style>
+<div class="topnav"> <!-- Top navigation, nothing in it yet -->
+</div>
+
+<style> 
 .center {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 50%;  
+    
+       
 } 
 .text-center {
     text-align: center
 }
 div {
-    padding-top: 50px;
+    padding-top: 20px;
     padding-right: 30px;
     padding-bottom: 50px;
     padding-left: 80px;
+   
 }
 </style>
 
@@ -42,9 +48,6 @@ EC1V 2NX London, United Kingdom<br>
 <span class="glyphicon glyphicon-envelope"></span> <a href="mailto:sales@crntech.io" style="color:rgb(0, 0, 0);">sales@crntech.io</a></p>
 </address>
 </div>
-
-<!-- Dit is de website voor CRN Technologies LTD. -->
-
 
 
 </body>
