--- a/index/index.html
+++ b/index/index.html
@@ -9,35 +9,113 @@
      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
-<style>
+<div class="topnav"> <!-- Top navigation, nothing in it yet -->
+</div>
+
+<style> 
+
+body {
+    background-color: rgb(226, 227, 231);
+}
+
+.bg-1 { 
+    background-color: rgb(226, 227, 231); 
+    color: #ffffff;
+} 
+
+.bg-2 { 
+    background-color: rgb(226, 227, 231); 
+    color: #ffffff;
+}  
+
+.bg-3 { 
+    background-color: rgb(226, 227, 231); 
+    color: #ffffff;
+} 
+
+.bg-4 { 
+    background-color:rgb(226, 227, 231); 
+    color: black;
+    
+
+}
 .center {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 50%;          
 } 
+div.absolute {
+    position: absolute;
+    bottom: 8px;
+    width: 50%;
+}
 .text-center {
     text-align: center
 }
+
+
+div {
+    padding-top: 20px;
+    padding-right: 30px;
+    padding-bottom: 50px;
+    padding-left: 80px;
+}
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: white;
+    color: black;
+    text-align: center;
+}
+
+.content {
+	display: block;
+	margin: 0px auto;
+	text-align: center;
+	font-size: 14px;
+}
+ 
+.container-fluid {
+      padding-top: 70px;
+      padding-bottom: 70px;
+  }
+
 </style>
 
-
-<img src="assets/CRN_Technologies_LOGO.jpg" alt="crntech_logo" class="center" style="width:22%;">
+<img src="assets/CRN_Technologies_LOGO.png" alt="crntech_logo" class="center" style="width:22%;">
 
 
 <body>
 
+
 <div class="container-fluid text-center">
 
-<address>
+
 <p><strong>CRN Technologies LTD.</strong><br>
 <span class="glyphicon glyphicon-map-marker"></span> Kemp House 152-160 City Road<br>
 EC1V 2NX London, United Kingdom<br>
 <span class="glyphicon glyphicon-envelope"></span> <a href="mailto:sales@crntech.io" style="color:rgb(0, 0, 0);">sales@crntech.io</a></p>
-</address>
+
+<div class="container-fluid bg-1 text-center"</div>
+
+<div class="container-fluid bg-2 text-center"</div>
+
+<div class="container-fluid bg-2 text-center"</div>
+    
+<div class="container-fluid bg-4 text-center">
+    <p>You write the code, we worry about the rest</p>
 </div>
 
-<!-- Dit is de website voor CRN Technologies LTD. -->
+
+<div class="footer container-fluid text-center">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/67/Kubernetes_logo.svg" style="width: 10%;">
+</div>
+
+</div>
 
 
 
