--- a/index/index.html
+++ b/index/index.html
@@ -80,7 +80,8 @@ div {
 	display: block;
 	margin: 0px auto;
 	text-align: center;
-	font-size: 14px;
+	font-size: 20px;
+    
 }
  
 .container-fluid {
@@ -111,8 +112,8 @@ EC1V 2NX London, United Kingdom<br>
 
 <div class="container-fluid bg-2 text-center"</div>
     
-<div class="container-fluid bg-4 text-center">
-    <p>You write the code, we worry about the rest</p>
+<div class="container-fluid bg-4 content text-center">
+    <p><i>You write the code, we worry about the rest.</i></p>
 </div>
 
 
